<resources>
    <string name="app_name">Foodie</string>
    <string name="slogan">"Yummy ~ Satisfaction…"</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_qr">Scan</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan_1">Cooking is a therapy</string>
    <string name="slogan_2">Cooking is for the soul</string>
    <string name="slogan_3">Explore the foodie in you</string>
    <string name="hint_auth_reg">Enter Email</string>
    <string name="hint_auth_reg_1">Enter Password</string>
    <string name="btn_register">Sign Up</string>
    <string name="existing_user">Already have an account? Login Now</string>
    <string name="forgot_password">Forgot Password? Reset Password Here.</string>
    <string name="btn_login">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="newpost">What  recipe for today?</string>
    <string name="post_it">Post It !</string>
    <string name="add_image_desp">Add Image</string>
    <string name="acc_id">Account Id</string>
    <string name="qr_description">Please place the QR code to scan for recipes</string>
</resources>
