<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_white"
        android:paddingStart="23dp"
        app:logo="@mipmap/splash"
        app:title="@string/app_name"
        app:titleMarginStart="100dp"
        app:titleTextColor="@color/pink"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/new_post"
        android:layout_width="match_parent"
        android:layout_height="528dp"
        android:layout_below="@+id/toolbarPost"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/post_background"
        android:gravity="top|left"
        android:hint="@string/newpost"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="23dp"
        android:paddingTop="23dp"
        tools:ignore="LabelFor,RtlHardcoded,RtlSymmetry" />


    <ImageButton
        android:id="@+id/post_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="134dp"
        android:background="@drawable/ic_baseline_add_photo_alternate_24"
        android:onClick="onClickPostIt"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/result"
        android:layout_width="302dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="131dp"
        android:onClick="onClickPostIt"
        android:text="@string/add_image_desp"
        android:textColor="@color/pink"
        android:textSize="23sp" />

    <Button
        android:id="@+id/post_status"
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/edit_text_background"
        android:onClick="onClickPostIt"
        android:text="@string/post_it"
        android:textColor="@color/light_white"
        android:textSize="23sp" />


</RelativeLayout>